--- a/css/media.css
+++ b/css/media.css
@@ -13,11 +13,6 @@
 
   /* Section */
 
-  /* .features-list {
-    display: flex;
-    flex-wrap: wrap;
-  } */
-
   .features-title {
     text-align: start;
   }
@@ -28,13 +23,33 @@
 
   /* Section 3 */
 
+  .teamcards > .container {
+    max-width: 582px;
+  }
+
   .teamcards-list {
-    width: 768px;
+    max-width: 100%;
+    gap: 64px 24px;
   }
 
   .teamcards-item {
-    margin-right: 24px;
     width: calc((100% - 24px) / 2);
+  }
+
+  /* Section 4 */
+
+  .costumers > .container {
+    max-width: 582px;
+  }
+
+  .costumers-list {
+    gap: 72px 24px;
+  }
+
+  .costumers-item {
+    width: calc((100% - 24px) / 3);
+    max-width: 168px;
+    height: 88px;
   }
 }
 
@@ -61,21 +76,64 @@
   }
 
   .features-title {
-    text-align: start;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
   }
 
   .features-text {
     margin-bottom: 0;
   }
 
-  .subtitle {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-  }
-
   .text {
     font-weight: normal;
+  }
+
+  /* Section 2 */
+
+  .section {
+    display: block;
+  }
+
+  /* Section 3 */
+
+  .teamcards > .container {
+    max-width: 1128px;
+  }
+
+  .teamcards {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+
+  .teamcards-list {
+    max-width: 100%;
+    gap: 24px;
+  }
+
+  .teamcards-item {
+    width: calc((100% - 72px) / 4);
+  }
+
+  /* Section 4 */
+
+  .costumers > .container {
+    max-width: 1158px;
+  }
+
+  .costumers {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+
+  .costumers-list {
+    gap: 24px;
+  }
+
+  .costumers-item {
+    width: calc((100% - 120px) / 6);
+    max-width: 168px;
+    height: 88px;
   }
 }
