--- a/css/styles.css
+++ b/css/styles.css
@@ -84,22 +84,6 @@
   overflow: hidden;
 }
 
-.subtitle {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.4px;
-  color: var(--title-color);
-}
-
-.title {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.72px;
-  color: var(--title-color);
-}
-
 .text {
   font-weight: 500;
   font-size: 16px;
@@ -322,7 +306,6 @@ img {
 }
 
 .features-item {
-  /* width: calc((100% - 72px) / 4); */
   width: 100%;
 }
 
@@ -344,6 +327,10 @@ img {
 .features-title {
   margin-bottom: 8px;
   text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  color: var(--title-color);
 }
 
 .features-text {
@@ -360,20 +347,20 @@ img {
 
 .section-list {
   display: flex;
+  gap: 24px;
 }
 
 .section-item {
-  margin-right: 24px;
   border: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
 }
 
-.section-item:last-child {
-  margin-right: 0;
-}
-
 .section-title {
   margin-bottom: 72px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
 }
 
 /* Section 3 */
@@ -387,28 +374,26 @@ img {
 .teamcards-list {
   display: flex;
   flex-wrap: wrap;
-  width: 264px;
+  gap: 24px;
+  max-width: 264px;
   margin: auto;
 }
 
 .teamcards-item {
   background: var(--cards-item-back-color);
-
-  margin-bottom: 32px;
   width: 100%;
-  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.teamcards-item:last-child {
-  margin-bottom: 0;
-}
-
 .teamcards-title {
   margin-bottom: 72px;
   text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  color: var(--title-color);
 }
 
 .teamcards-img {
@@ -422,6 +407,11 @@ img {
 .teamcards-subtitle {
   margin-bottom: 8px;
   text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  color: var(--title-color);
 }
 
 .teamcards-text {
@@ -465,20 +455,26 @@ img {
 
 .costumers-title {
   margin-bottom: 72px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
 }
 
 .costumers {
-  padding-bottom: 120px;
-  padding-top: 120px;
+  padding-bottom: 96px;
+  padding-top: 96px;
 }
 
 .costumers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px 16px;
 }
 
 .costumers-item {
-  width: calc((100% - 120px) / 6);
+  width: calc((100% - 16px) / 2);
+  max-width: 190px;
   height: 88px;
 }
 
@@ -615,12 +611,14 @@ img {
   background: var(--footer-back-color);
   padding-top: 100px;
   padding-bottom: 100px;
-  display: flex;
+  /* display: flex; */
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
+  /* display: flex; */
+  /* align-items: baseline; */
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-wrap {
@@ -651,7 +649,7 @@ img {
 /* Footer Icon */
 
 .footer-soc {
-  display: flex;
+  /* display: flex; */
   align-items: start;
   justify-content: center;
   flex-direction: column;
@@ -700,7 +698,7 @@ img {
 /* Footer Form */
 
 .footer-form {
-  display: flex;
+  /* display: flex; */
   gap: 24px;
 }
 
