--- a/css/media.css
+++ b/css/media.css
@@ -6,9 +6,98 @@
   margin-right: auto;
 }
 
+@media screen and (min-width: 426px) {
+  .modal {
+    width: 392px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 766px;
+  }
+
+  /* Header */
+
+  .mob-open-btn {
+    display: none;
+  }
+
+  .header-flex {
+    padding-bottom: 20px;
+  }
+
+  .header-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .header-link {
+    position: relative;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--link-color);
+    padding: 24px 0;
+    transition-property: color;
+    transition: color var(--tra-speed) var(--tra-function);
+  }
+
+  .header-link::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--link-hover-color);
+
+    bottom: -1px;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform var(--tra-speed) var(--tra-function);
+  }
+
+  .header-link:hover,
+  .header-link:focus,
+  .header-link.current {
+    color: var(--link-hover-color);
+  }
+
+  .header-link:hover::after,
+  .header-link:focus::after,
+  .header-link.current::after {
+    transform: scaleX(1);
+  }
+
+  .header-link.current {
+    color: var(--link-hover-color);
+  }
+
+  .header-address {
+    font-style: normal;
+    margin-left: auto;
+  }
+
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .address {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    color: var(--address-color);
+    display: block;
+
+    transition: color var(--tra-speed) var(--tra-function);
+  }
+
+  .address:hover,
+  .address:focus {
+    color: var(--address-hover-color);
   }
 
   /* Hero */
@@ -62,10 +151,6 @@
     gap: 64px 24px;
   }
 
-  .teamcards-item {
-    width: calc((100% - 24px) / 2);
-  }
-
   /* Section 4 */
 
   .costumers > .container {
@@ -85,11 +170,73 @@
   .modal {
     width: 408px;
   }
+
+  /* Footer */
+
+  .footer-container {
+    max-width: 582px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer-container .footer-wrap,
+  .footer-container .footer-soc {
+    max-width: 50%;
+  }
+
+  .footer-wrap {
+    flex-direction: column;
+    align-items: baseline;
+  }
+
+  .footer-field {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer-soc {
+    align-items: flex-start;
+    margin-left: 24px;
+  }
+
+  .footer-text {
+    max-width: 264px;
+  }
+
+  .footer-form {
+    display: flex;
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 264px;
+  }
+
+  .footer-btn {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+  }
+
+  /* Header */
+
+  .header-flex {
+    padding-bottom: 24px;
+  }
+
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .address {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
 
   /* Hero */
@@ -143,8 +290,6 @@
   }
 
   .features-wrap {
-    width: 264px;
-    height: 112px;
     background-color: var(--features-icon-bgc);
     border-radius: 4px;
     display: flex;
@@ -154,6 +299,7 @@
   }
 
   .features-title {
+    width: 264px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -162,6 +308,9 @@
 
   .features-text {
     margin-bottom: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
   }
 
   .text {
@@ -232,5 +381,48 @@
     width: calc((100% - 120px) / 6);
     max-width: 168px;
     height: 88px;
+  }
+
+  /* Fotter */
+
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer-container > div {
+    max-width: calc(100% / 3);
+  }
+
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: nowrap;
+  }
+
+  .footer-text {
+    margin: 0;
+  }
+
+  .footer-soc {
+    margin-left: 120px;
+    margin-right: 80px;
+  }
+
+  .footer-soc-list {
+    margin: 0;
+  }
+
+  .footer-field {
+    width: 100%;
+  }
+
+  .footer-form {
+    max-width: 100%;
+  }
+
+  .footer-input {
+    max-width: 264px;
+    margin: 0;
   }
 }
